updated SOAP buttons, but still need to update SOAPs

--- a/src/co-vet/soap-questions-prompts.html
+++ b/src/co-vet/soap-questions-prompts.html
@@ -71,13 +71,13 @@
         </p>
         <p class="soap-general-text">
           Start SOAP questions from here, making sure to specifically state "<span class="soap-bold">NO
-          VOMITING</span>", "<span class="soap-bold">NO  DIARRHEA</span>", etc (keywords/prompts matter!)...
+          VOMITING</span>", "<span class="soap-bold">NO  DIARRHEA</span>", etc (<span class="soap-italic">keywords/prompts matter!</span>)...
         </p>
       </section>
 
       <h6>SOAP LIST</h6>
       <section id="list-of-soap-types">
-        <ul class="content-list">
+        <ul>
           <!-- USE FOR PAGE LIST/NAV/LINKING -->
           <li>
             General/Standard
@@ -85,7 +85,7 @@
               <li><a href="#soap-qs-medical">Medical</a></li>
               <li><a href="#soap-qs-med-prog">Med Progress</a></li>
               <li><a href="#soap-qs-tech">Tech</a></li>
-              <li><a href="#soap-qs-obj">Objective Prompts</a> <span class="comment">(Drs.)</span></li>
+              <li><a href="#soap-qs-obj">Objective Prompts</a><span class="comment">(Drs.)</span></li>
             </ul>
           </li>
           <li>
@@ -101,7 +101,8 @@
             Establish Care
             <ul class="soap-list">
               <li><a href="#soap-qs-est-care-ak9">Adult K9</a></li>
-              <li><a href="#soap-qs-est-care-puppy">Puppy</a> <span class="comment">(new Client/new Pt)</span></li>
+              <li><a href="#soap-qs-est-care-puppy">Puppy</a>
+               <span class="comment">(new Client/new Pt)</span></li>
               <li><a href="#soap-qs-est-care-afel">Adult Feline</a></li>
               <li><a href="#soap-qs-est-care-kitten">Kitten</a> <span class="comment">(new Client/new Pt)</span></li>
             </ul>
